fix: 增加收盘K线幂等补拉并统一成交量单位